setup navigation controller with dummy fragments

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,11 +31,12 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation 'androidx.core:core-ktx:1.0.2'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'com.google.android.material:material:1.0.0'
     testImplementation 'junit:junit:4.12'
-
+    implementation "androidx.core:core-ktx:$ktxVersion"
 
     //Room Database Dependency
     implementation "androidx.room:room-runtime:$room"
@@ -53,4 +54,17 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:$square"
     implementation "com.squareup.retrofit2:converter-gson:$square"
     implementation "com.squareup.okhttp3:logging-interceptor:3.10.0"
+
+    // app-support
+    implementation "androidx.navigation:navigation-fragment-ktx:$navigationVersion"
+    implementation "androidx.navigation:navigation-ui-ktx:$navigationVersion"
+    implementation "androidx.appcompat:appcompat:$appCompatSupport"
+    implementation "androidx.constraintlayout:constraintlayout:$constraintLayoutVersion"
+
+    implementation "androidx.fragment:fragment-ktx:$rootProject.fragmentVersion"
+
+    //lifecycle
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle"
 }
