--- a/build.gradle
+++ b/build.gradle
@@ -24,15 +24,20 @@ allprojects {
 }
 
 ext {
-    lifecycle = '1.1.1'
+    lifecycle = '2.2.0-alpha02'
     lifecycleExtention = '2.2.0-rc02'
     arch_core = '2.0.1'
-    room = "2.2.2"
+    room = "2.2.3"
     appCompatSupport = "1.1.0"
     designSupport = "28.0.0"
     square = "2.6.1"
-    dagger = "2.16"
+    dagger = "2.23.2"
     paging = "2.1.0"
+    navigationVersion = '2.0.0'
+    constraintLayoutVersion = '2.0.0-beta1'
+    coroutinesVersion = "1.3.0-RC"
+    fragmentVersion = '1.1.0-alpha09'
+    ktxVersion = '1.0.2'
 
 }
 
